--- a/css/app.css
+++ b/css/app.css
@@ -4,7 +4,14 @@ fb gray #e9ebee */
 
 header {
     background-color: #4267b2;
+}
 
+head{
+    tex
+}
+#icon {
+    max-width: 20px;
+    max-height: 20px;
 }
 
 nav {
