added media screen

--- a/css/app.css
+++ b/css/app.css
@@ -33,3 +33,13 @@ a {
 body {
     background-color: #e9ebee;
 }
+
+@media screen and (min-width: 480px) {
+    nav {
+        text-align: center;
+    }
+}
+
+@media screen and (min-width: 660px) {
+
+}
