--- a/css/app.css
+++ b/css/app.css
@@ -6,16 +6,12 @@ header {
     background-color: #4267b2;
 }
 
-head{
-    tex
-}
 #icon {
     max-width: 20px;
     max-height: 20px;
 }
-
-nav {
-    text-align: right;
+footer{
+    text-align: center;
 }
 
 nav li {
@@ -35,11 +31,13 @@ body {
 }
 
 @media screen and (min-width: 480px) {
-    nav {
+    header {
         text-align: center;
     }
 }
 
 @media screen and (min-width: 660px) {
-
+    nav {
+        text-align: right;
+    }
 }
