--- a/css/app.css
+++ b/css/app.css
@@ -29,15 +29,19 @@ a {
 body {
     background-color: #e9ebee;
 }
-
+/* 
 @media screen and (min-width: 480px) {
     header {
         text-align: center;
     }
-}
+} */
 
 @media screen and (min-width: 660px) {
     nav {
         text-align: right;
+    },
+    #icon{
+        text-align: left;
+        display: left; 
     }
 }
