--- a/css/app.css
+++ b/css/app.css
@@ -2,32 +2,73 @@
 fb red notification #fa3e3e
 fb gray #e9ebee */
 
+
+a {
+    text-decoration: none; 
+}
+
+body {
+    flex-direction: column;
+    min-height: 100vh;
+    background-color: #e9ebee;
+    display: flex;
+}
+
 header {
+    margin: 0 0 30px 0;
+    width: 100%;
     background-color: #4267b2;
+}
+
+#fbIcon {
+    padding-right: .5em;
 }
 
 #icon {
     max-width: 20px;
     max-height: 20px;
 }
-footer{
+form {
+    display: inline-block;
+    /* padding-left: .5%; */
+    padding-right: 10%;
+}
+
+input {
+    width: 175%;
+    color: gray;
+    padding-left: 1em;
+}
+
+nav {
     text-align: center;
+    padding: 10px 0;
+    margin: 20px 0 0;
+    display: inline-block;
+    padding-left: 5%;
+    
+}
+
+nav ul {
+    list-style: none;
+    margin: 0 10px;
+    padding: 0;
 }
 
 nav li {
     display: inline-block;
 }
+nav a {
+    padding: 15px 10px;
+}
 
-#wrapper {
+footer{
     text-align: center;
 }
 
-a {
-    text-decoration: none;
-}
-
-body {
-    background-color: #e9ebee;
+#wrapper {
+    text-align: center;
+    /* display: block; */
 }
 
 @media screen and (min-width: 480px) {
@@ -40,4 +81,4 @@ body {
     nav {
         text-align: right;
     }
-}
+} */
