--- a/css/app.css
+++ b/css/app.css
@@ -16,9 +16,11 @@ body {
 
 header {
     margin: 0 0 30px 0;
-    width: 100%;
+
+    width: auto;
     background-color: #4267b2;
     padding-left: 20%;
+    padding-right: -10%;
 }
 
 #fbIcon {
@@ -32,21 +34,23 @@ header {
 form {
     display: inline-block;
     /* padding-left: .5%; */
-    padding-right: 10%;
+    padding-right: 20%;
 }
 
 input {
     width: 175%;
     color: gray;
     padding-left: 1em;
+    /* padding-right: 10%; */
 }
 
 nav {
     text-align: center;
+    padding-left: %; 
     padding: 10px 0;
     margin: 20px 0 0;
     display: inline-block;
-    padding-left: 5%;
+    /* padding-left: 2%; */
     
 }
 
